terraform/alb.tf
# Application Load Balancer (ALB) Resources

# ALB
resource "aws_lb" "credex_alb" {
  count              = var.create_load_balancer ? 1 : 0
  name               = "credex-alb-${var.environment}"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.alb.id]
  subnets            = local.subnet_ids

  tags = local.common_tags
}

data "aws_lb" "credex_alb" {
  count = var.create_load_balancer ? 0 : 1
  name  = "credex-alb-${var.environment}"
}

# Target Group
resource "aws_lb_target_group" "credex_core" {
  count       = var.create_target_group ? 1 : 0
  name        = "credex-tg-${var.environment}"
  port        = 5000
  protocol    = "HTTP"
  vpc_id      = local.vpc_id
  target_type = "ip"

  health_check {
    healthy_threshold   = "3"
    interval            = "30"
    protocol            = "HTTP"
    matcher             = "200"
    timeout             = "3"
    path                = "/health"
    unhealthy_threshold = "2"
  }

  tags = local.common_tags
}

data "aws_lb_target_group" "credex_core" {
  count = var.create_target_group ? 0 : 1
  name  = "credex-tg-${var.environment}"
}

# ACM Certificate
resource "aws_acm_certificate" "credex_cert" {
  count             = var.create_load_balancer ? 1 : 0
  domain_name       = local.full_domain
  validation_method = "DNS"

  tags = merge(local.common_tags, {
    Name = "credex-cert-${var.environment}"
  })

  lifecycle {
    create_before_destroy = true
  }
}

data "aws_route53_zone" "selected" {
  name         = "mycredex.app."
  private_zone = false
}

resource "aws_route53_record" "cert_validation" {
  for_each = var.create_load_balancer ? {
    for dvo in aws_acm_certificate.credex_cert[0].domain_validation_options : dvo.domain_name => {
      name   = dvo.resource_record_name
      record = dvo.resource_record_value
      type   = dvo.resource_record_type
    }
  } : {}

  allow_overwrite = true
  name            = each.value.name
  records         = [each.value.record]
  ttl             = 60
  type            = each.value.type
  zone_id         = data.aws_route53_zone.selected.zone_id
}

resource "aws_acm_certificate_validation" "cert_validation" {
  count                   = var.create_load_balancer ? 1 : 0
  certificate_arn         = aws_acm_certificate.credex_cert[0].arn
  validation_record_fqdns = [for record in aws_route53_record.cert_validation : record.fqdn]
}

# ALB Listener
resource "aws_lb_listener" "credex_listener" {
  count             = var.create_load_balancer ? 1 : 0
  load_balancer_arn = aws_lb.credex_alb[0].arn
  port              = "443"
  protocol          = "HTTPS"
  ssl_policy        = "ELBSecurityPolicy-2016-08"
  certificate_arn   = aws_acm_certificate.credex_cert[0].arn

  default_action {
    type             = "forward"
    target_group_arn = var.create_target_group ? aws_lb_target_group.credex_core[0].arn : data.aws_lb_target_group.credex_core[0].arn
  }

  depends_on = [aws_acm_certificate_validation.cert_validation]
}

resource "aws_lb_listener" "redirect_http_to_https" {
  count             = var.create_load_balancer ? 1 : 0
  load_balancer_arn = aws_lb.credex_alb[0].arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type = "redirect"

    redirect {
      port        = "443"
      protocol    = "HTTPS"
      status_code = "HTTP_301"
    }
  }
}

resource "aws_route53_record" "api" {
  count           = var.create_load_balancer ? 1 : 0
  zone_id         = data.aws_route53_zone.selected.zone_id
  name            = local.full_domain
  type            = "A"
  allow_overwrite = true

  alias {
    name                   = var.create_load_balancer ? aws_lb.credex_alb[0].dns_name : data.aws_lb.credex_alb[0].dns_name
    zone_id                = var.create_load_balancer ? aws_lb.credex_alb[0].zone_id : data.aws_lb.credex_alb[0].zone_id
    evaluate_target_health = true
  }
}
